# WotLKRotations

./: .cursorignore  .gitignore  README.md  combat_log_reader.py  combat_rotation.py  config.ini  gameinterface.py  gui.py  luainterface.py  memory.py  object_manager.py  offsets.py  rules.py  targetselector.py  wow_object.py
Rules/: Rogue.json
Scripts/: rogue_level2.lua  warrior_simple.lua
WowInjectDLL/: CMakeLists.txt  command_processor.cpp  command_processor.h  dllmain.cpp  game_actions.cpp  game_actions.h  game_state.cpp  game_state.h  globals.cpp  globals.h  hook_manager.cpp  hook_manager.h  ipc_manager.cpp  ipc_manager.h  lua_interface.cpp  lua_interface.h  offsets.h  pch.cpp  pch.h
gui/: __init__.py  combat_log_tab.py  log_tab.py  lua_runner_tab.py  monitor_tab.py  rotation_control_tab.py  rotation_editor_tab.py
